feat: enhance display configuration UI and add both suggestions and video searching